force-app/main/default/objects/Session__c/fields/Already_Presented_Link__c.field-meta.xml
<CustomField>
    <fullName>Already_Presented_Link__c</fullName>
    <label>Already Presented Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>