force-app/main/default/objects/Session__c/fields/Does_session_already_presented__c.field-meta.xml
<CustomField>
    <fullName>Does_session_already_presented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does session already presented?</label>
    <type>Checkbox</type>
</CustomField>