force-app/main/default/objects/Session__c/fields/Individual_Presenter_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Presenter_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Presenter Confirmation</label>
    <type>Checkbox</type>
</CustomField>