force-app/main/default/objects/Session__c/fields/Intellectual_Property_Rights_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property_Rights_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intellectual Property Rights Compliance</label>
    <type>Checkbox</type>
</CustomField>