force-app/main/default/objects/Session__c/fields/Intro_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Intro_Video_Link__c</fullName>
    <label>Intro Video Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>