force-app/main/default/objects/Session__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <description>This will show the total duration of session</description>
    <formula>TEXT(((Session_End_Time__c - Session_Start_Time__c)-MOD((Session_End_Time__c - Session_Start_Time__c),3600000))/3600000) &amp; &quot;h &quot; &amp;  TEXT(MOD((Session_End_Time__c - Session_Start_Time__c),3600000)/60000) &amp; &quot;m&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Duration</label>
    <type>Text</type>
</CustomField>