force-app/main/default/objects/Session__c/fields/Session_Expertise_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Expertise_Details__c</fullName>
    <label>Session Expertise Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>