force-app/main/default/objects/Session__c/fields/Session_Track__c.field-meta.xml
<CustomField>
    <fullName>Session_Track__c</fullName>
    <label>Session Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Integration Cloud</fullName>
            </value>
            <value>
                <fullName>Manufacturing Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Education Services Cloud</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Vaccine Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Experience Cloud1</fullName>
                <isActive>false</isActive>
                <label>Experience Cloud1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>