force-app/main/default/objects/Session__c/fields/Speaker_Email__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Email__c</fullName>
    <label>Speaker Email</label>
    <type>Email</type>
</CustomField>