force-app/main/default/objects/Session__c/fields/Why_Session_is_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Why_Session_is_Chosen__c</fullName>
    <description>Please take a moment to tell us why you think we should select your
presentation.</description>
    <label>Why Session is Chosen?</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>