force-app/main/default/objects/Session__c/validationRules/Session_Not_Add_After_Event_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Not_Add_After_Event_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Start_Date__c &gt; DATEVALUE(Event__r.Event_End_Date_and_Time__c) || Session_End_Date__c &gt; DATEVALUE(Event__r.Event_End_Date_and_Time__c)</errorConditionFormula>
    <errorMessage>Session not added after Event End Date</errorMessage>
</ValidationRule>