force-app/main/default/objects/Session__c/validationRules/Session_Time_and_date_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Time_and_date_Set</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    AND(
         Session_Start_Date__c = Session_End_Date__c,
        Session_End_Time__c &lt;= Session_Start_Time__c
    ),
    true,
    IF(
        Session_End_Date__c  &lt;  Session_Start_Date__c ,
        true,
        false
    )
)</errorConditionFormula>
    <errorMessage>Please add end date/time greater than start date/time</errorMessage>
</ValidationRule>