force-app/main/default/objects/Session__c/validationRules/SessionMustOnEventDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SessionMustOnEventDate</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Start_Date__c &lt; DATEVALUE(Event__r.Event_Start_Date_and_Time__c) ||  Session_End_Date__c &lt;DATEVALUE(Event__r.Event_Start_Date_and_Time__c)</errorConditionFormula>
    <errorMessage>Session Start Date Must Be On Event  date</errorMessage>
</ValidationRule>